Fix issue with show more icon overlapping traceability text on flow dashboard.
[PO-761]

--- a/src/app/dashboards/projects/flow/dashboard.module.css
+++ b/src/app/dashboards/projects/flow/dashboard.module.css
@@ -1,7 +1,7 @@
 .flowDashboard{
     height: 89%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1.3fr;
     grid-template-rows: auto 35% 47%;
     gap: 0.5rem;
     grid-template-areas: "throughput throughput throughput throughput pipeline pipeline pipeline pipeline leadAndCycleTime leadAndCycleTime leadAndCycleTime traceability"
